--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Nunito:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@400;500;700&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
