--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Nunito:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;600;700&family=Nunito:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@400;500;700&display=swap');
 
 :root {
   --max-width: 1100px;
